fixed field spacing and added diabled form submit if form fields are invalid or empty

--- a/src/components/checkList/CheckList.css
+++ b/src/components/checkList/CheckList.css
@@ -1,6 +1,6 @@
 .form{
     margin: 30px;
-    width: 50%;
+    /* width: 50%; */
 }
 
 /* .textfield{
